<resources>
    <string name="app_name">eKnowledgeProjectAssign</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name_splash">eKnowledge</string>
    <string name="nav_header_title">eKnowledge</string>
    <string name="nav_header_subtitle">eknowledgesystems.web.app/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_portal">Portal</string>
    <string name="menu_textbooks">Text-books</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_tools">Smart-Tools</string>
    <string name="menu_events">Events</string>
    <string name="menu_share">Share</string>
    <string name="screen1">Screen 1</string>
    <string name="screen2">Screen 2</string>
    <string name="screen3">Screen 3</string>

</resources>